--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     />
     <script
       type="text/javascript"
-      src="//maps.googleapis.com/maps/api/js?key=AIzaSyAURsom7c-jmbNERN0wVqb4OzVten2Hy24&language=en&libraries=places"
+      src="//maps.googleapis.com/maps/api/js?key=AIzaSyAURsom7c-jmbNERN0wVqb4OzVten2Hy24&language=fr&libraries=places,geometry"
     ></script>
     <title>React App</title>
   </head>
